A few hours of work, 1. Making the website a bit better on phone, 2. Add transparent logo, 3. Work on contact page (now it doesnt suck as much), 4. Fixing text alignment on main page and small stuff like that.

--- a/kontakt/style.css
+++ b/kontakt/style.css
@@ -93,6 +93,14 @@ header{
     width:100px;
     float:left;
 }
+#navImg:hover {
+    filter: 
+    drop-shadow(0 0 2px rgba(0,191,255,0.3))
+    drop-shadow(0 0 3px rgba(0,191,255,0.3))
+    drop-shadow(0 0 4px rgba(0,191,255,0.3))
+    drop-shadow(0 0 8px rgba(0,191,255,0.3));
+
+}
 #navContainer {
     width: 60vw;
     height: 100px;
@@ -148,22 +156,89 @@ h1 {
     font-weight:400;
 }
 .smallContainer {
-    height: 30vh;
-    width: 30vw;
     padding:2vh;
     display: inline-block;
-    color:white;
+    color:black;
     border-style:solid;
-    border-color:white;
+    border-color:black;
+    background-color: rgb(240,240,230);
 }
 #sC1 {
+    height:35vh;
+    width:45vw;
     float:left;
 }
 #sC2 {
+    height:35vh;
+    width:15vw;
     float:right;
 }
-
-
+#sC2Text1 h2 {
+    margin:0;
+    text-decoration:underline;
+}
+#sC2Text2 h2 {
+    margin-top:5vh;
+    text-decoration:underline;
+}
+#cI1, #cI2 {
+    background-color:rgb(240,240,230);
+    color:black;
+    font-size:1.5vh;
+    height:3vh;
+    width:70%;
+    float:left;
+    margin: 1vh 0;
+    border: black solid 2px;
+    padding:1px 2px;
+}
+#cI3 {
+    background-color:rgb(240,240,230);
+    color:black;
+    font-size:1.5vh;
+    height:20vh;
+    width:70%;
+    float:left;
+    margin: 1vh 0;
+    border: black solid 2px;
+    padding:3px 2px;
+}
+#submit {
+    background-color:rgb(10, 18, 42);
+    color:white;
+    border: black solid 2px;
+    height:10vh;
+    width:25%;
+    /* 2x3+1x4+10 */
+    margin:12vh 0 0 0;
+    float:right;
+    padding:3px 2px;
+    font-size:3vh;
+}
+#submit:hover {
+background-color:rgb(30, 60, 90);
+    text-shadow:
+        0 0 10px #00bfff,
+        0 0 30px #00bfff,  
+        0 0 40px #00bfff,  
+        0 0 80px #00bfff;
+}
+.socials {
+    margin-top:10vh;
+    padding:0;
+    text-align:center;
+}
+.socials img {
+    margin:auto;
+    height:50px;
+    width:50px;
+}
+#social1 {
+    float:left;
+}
+#social3 {
+    float:right;
+}
 
 @media (max-width: 1000px) {
     .navbar ul {
@@ -176,16 +251,48 @@ h1 {
 @media (max-width: 900px) {
     #sC1, #sC2 {
         float:none;
+        margin:auto;
+        width: calc(100% - 3vw - 4vh);
     }
     #sC2 {
-        margin-top: 5vh;
+        margin-top: 1vh;
+        height:20vh;
+        
     }
-    .smallContainer {
-        width: 70vw;
+    #flexText {
+        display:flex;
+        flex-direction:column;
+        width:40%;
+    }
+    #cI1, #cI2, #cI3, #submit {
+        /* 4x2 */
+        width: calc(100% - 8px);
+    }
+    #cI3 {
         height: 15vh;
     }
+    #sC2Text1, #sC2Text2 {
+        float:left;
+        display:block;
+    }
+    .socials {
+        width: 50%;
+        display:block;
+        float:right;
+        margin-top: calc(-12vh - 25px);
+    }
+    #submit {
+        margin:4px;
+        height:5vh;
+    }
+    .smallContainer {
+        display:block;
+    }
     .content {
+        height:70vh;
         width: 90vw;
         text-align:center;
+        margin-left:auto;
+        margin-right:auto;
     }
 }
